Fixed few bugs and the project has been built
On Java 1.8 and with Maven for the first time